# alertpi

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build-pi-container.yml
container/: Containerfile
deploy/nginx/: siren-webhook
deploy/quadlet/: siren-webhook.container
deploy/systemd/: internet-led-watchdog.service  siren-driver.service
docs/: SIREN_PROJECT_CONTEXT.md
scripts/: gpio_smoke.py  internet-watchdog-install.sh  internet-watchdog-uninstall.sh  local_trigger.py  podman-build.sh  podman-run.sh  quadlet-install.sh  quadlet-uninstall.sh  setup-nginx.sh  setup-siren-user.sh  setup.sh  systemd-install.sh  systemd-uninstall.sh
src/siren_driver/: __init__.py  __main__.py  auth.py  config.py  gpio.py  main.py
src/siren_driver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/watchdog/: __init__.py  internet_led_watchdog.py
tests/: test_auth.py  test_trigger.py
