[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "siren-driver"
version = "0.1.0"
description = "Raspberry Pi siren webhook service"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "gpiozero>=2.0,<3",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "httpx>=0.27,<1",
]
pi = [
  "rpi-lgpio>=0.6,<1; platform_system == 'Linux' and (platform_machine == 'armv7l' or platform_machine == 'aarch64')",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
